<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".NewSesionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_log2"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo_eduapps" />

            <EditText
                android:id="@+id/edit_Proposito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/proposito"
                android:inputType="textPersonName" tools:targetApi="o" />

            <Spinner
                android:id="@+id/sp_areas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"
                android:entries="@array/areas"
                android:fontFamily="sans-serif-light"
                android:spinnerMode="dropdown"
                android:textAlignment="inherit"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_fechainicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/dd_mm_aaaa"
                android:inputType="date" tools:targetApi="o" />

            <EditText
                android:id="@+id/edit_fechacierre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/dd_mm_aaaa"
                android:inputType="date"
                android:autofillHints="" tools:targetApi="o" />

            <Button
                android:id="@+id/btn_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_style"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:text="@string/agregar"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>