<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/colorSecondary"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idsesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/id_sesion"
                    android:textAlignment="viewStart"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />

                <TextView
                    android:id="@+id/text_idsesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/id_sesion"
                    android:textAlignment="viewStart"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/area"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />

                <TextView
                    android:id="@+id/text_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/area"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_proposito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/proposito"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="98dp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="224dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fechainicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/fecha_inicio"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />

                <TextView
                    android:id="@+id/text_fechainicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/dd_mm_aaaa"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fechacierre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/fecha_cierre"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />

                <TextView
                    android:id="@+id/text_fechacierre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/dd_mm_aaaa"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    tools:layout_conversion_absoluteHeight="22dp"
                    tools:layout_conversion_absoluteWidth="98dp"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="224dp" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>